# contract_light

./: CMakeLists.txt  Doxyfile  README.md
include/: contract_light.hpp  contract_light_context.hpp  contract_light_helper.hpp  contract_light_traits.hpp
source/: CMakeLists.txt  contract_light.cpp
test/: CMakeLists.txt  contract_light_test.cpp  main.cpp
tools/gtest-1.7.0/: CMakeLists.txt
tools/gtest-1.7.0/cmake/: internal_utils.cmake
